chore: add vscode extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,5 +31,14 @@
       "default": "false"
     }
   },
-  "platforms": ["Java"]
+  "platforms": ["Java"],
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "vscjava.vscode-java-pack",
+        "redhat.vscode-yaml",
+        "redhat.java"
+      ]
+    }
+  }
 }
