--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,9 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/java:17",
+  "name": "Precognox SDLC Workshop Container",
+  "image": "mcr.microsoft.com/devcontainers/java:0-17",
   "features": {
     "ghcr.io/devcontainers/features/java:1": {
-      "version": "17-bullseye",
+      "version": "none",
       "installGradle": "false",
       "installMaven": "true"
     }
