chore(ci): add tests & package steps

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,5 +26,12 @@ jobs:
           java-version: "17"
           distribution: "temurin"
           cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: Test & Build with Maven
+        run: mvn clean test
+      - name: Create Package
+        run: mvn package
+      - name: Upload to GitHub Packages
+        uses: actions/upload-artifact@v2
+        with:
+          name: package
+          path: target/*.jar
